# ProyectoDistribuidos

./: README.md  main.py  pyproject.toml
Source/: DB.py  Health_helper.py  arguments.py  config.txt  constanstes.py  health_check.py  monitor.py  operaciones.py  proxy.py  read.py  sensor.py  sistema_de_calidad.py
sistema_calidad_agua/: DB.py  db_manager.py  health_check.py  monitor.py  proxy.py  sensor.py  sistema_calidad.py
sistema_calidad_agua/constants/: __init__.py  net.py  parsers.py  paths.py  values.py
sistema_calidad_agua/db/: data.json
sistema_calidad_agua/helpers/: __init__.py  health_check_functions.py  operations.py  read.py
