[tool.poetry]
name = "proyectodistribuidos"
version = "0.1.0"
description = ""
authors = ["Michael Gonzalez <michaeljoelgd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyzmq = "^25.1.1"
argparse = "^1.4.0"
tornado = "^6.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
